[gd_scene load_steps=11 format=3 uid="uid://dnarwr68ysgik"]

[ext_resource type="PackedScene" uid="uid://bdr7rn7vpdopq" path="res://Mesh/Parts/Head/HumanFeminine/MyHumanHead.glb" id="1_ab4oe"]
[ext_resource type="Script" uid="uid://c4lbfd4esakpr" path="res://Mesh/Parts/Head/HumanFeminine/my_human_head.gd" id="2_l4a0u"]
[ext_resource type="Script" uid="uid://b17qxyq8oh4kq" path="res://Game/Doll/doll_attach_to.gd" id="3_pdg8m"]
[ext_resource type="Material" uid="uid://5ypm6rky47xe" path="res://Mesh/Parts/Head/HumanFeminine/Materials/HumanHeadMat.tres" id="4_ivnxr"]
[ext_resource type="Material" uid="uid://c2hc7l0jpere0" path="res://Mesh/Parts/SharedMaterials/EyeBrowsMat.tres" id="10_o81br"]
[ext_resource type="Material" uid="uid://13wriie643e5" path="res://Mesh/Parts/SharedMaterials/EyelashesMat.tres" id="11_o81br"]
[ext_resource type="Material" uid="uid://bit1p64srkgtb" path="res://Mesh/Parts/Head/HumanFeminine/Materials/HumanMouthMat.tres" id="12_k178j"]
[ext_resource type="Material" uid="uid://crsv57v2tbwqk" path="res://Mesh/Parts/SharedMaterials/EyeMat.tres" id="12_l4a0u"]
[ext_resource type="PackedScene" uid="uid://di8q5ut8regou" path="res://Game/Doll/FaceAnimator/face_animator.tscn" id="14_l4a0u"]
[ext_resource type="PackedScene" uid="uid://3omr6ntpyb48" path="res://Game/Doll/doll_attach_point.tscn" id="16_o81br"]

[node name="MyHumanHead" instance=ExtResource("1_ab4oe")]
script = ExtResource("2_l4a0u")
eyeMat = ExtResource("12_l4a0u")
headMat = ExtResource("4_ivnxr")

[node name="MyHeadRig" parent="." index="0"]
script = ExtResource("3_pdg8m")
attachPoint = "head"

[node name="Skeleton3D" parent="MyHeadRig" index="0"]
bones/1/rotation = Quaternion(7.22901e-08, 0.288397, 0.957511, 2.17733e-08)
bones/2/position = Vector3(4.25723e-09, 0.0907292, 0.0281944)
bones/3/position = Vector3(-0.00984525, 0.0882308, 0.0287998)
bones/4/position = Vector3(-0.0190917, 0.0803209, 0.0370041)
bones/4/rotation = Quaternion(0.289578, 9.06952e-08, -8.27869e-08, 0.957154)
bones/5/position = Vector3(0.00984526, 0.0882308, 0.0287998)
bones/6/position = Vector3(0.0190918, 0.0803209, 0.0370041)
bones/6/rotation = Quaternion(0.289578, 9.06952e-08, -8.27868e-08, 0.957154)
bones/7/position = Vector3(-2.57657e-10, 0.0354434, -0.00170633)
bones/7/rotation = Quaternion(-3.69986e-07, 0.954131, 0.299389, -1.32319e-06)
bones/9/position = Vector3(-6.11577e-14, 0.0226628, -7.85495e-09)
bones/9/rotation = Quaternion(-0.0741664, -8.63869e-07, 1.83312e-07, 0.997246)
bones/10/rotation = Quaternion(1.91082e-08, 0.676524, 0.73642, 3.53673e-08)
bones/11/position = Vector3(-3.06126e-16, 0.0234142, 0.126817)
bones/12/position = Vector3(0.0270634, 0.00142652, 0.103898)
bones/12/rotation = Quaternion(2.42941e-07, 0.633354, 0.773862, 1.98809e-07)
bones/13/rotation = Quaternion(3.09086e-08, 0.707107, 0.707107, 3.09086e-08)
bones/14/position = Vector3(0.0201218, 0.016471, 0.119555)
bones/14/rotation = Quaternion(3.09086e-08, 0.707107, 0.707107, 3.09086e-08)
bones/15/position = Vector3(-0.0270634, 0.00142652, 0.103898)
bones/15/rotation = Quaternion(-2.42937e-07, 0.633354, 0.773862, -1.98812e-07)
bones/16/rotation = Quaternion(3.09086e-08, 0.707107, 0.707107, 3.09086e-08)
bones/17/position = Vector3(-0.0201218, 0.016471, 0.119555)
bones/17/rotation = Quaternion(3.09086e-08, 0.707107, 0.707107, 3.09086e-08)
bones/18/rotation = Quaternion(0.0325584, 0.811282, 0.582356, -0.0402782)
bones/19/rotation = Quaternion(0.0374869, 0.706112, 0.706113, -0.0374844)
bones/20/rotation = Quaternion(0.213208, 0.73461, 0.605336, -0.220134)
bones/21/rotation = Quaternion(-0.127035, 0.754553, 0.62932, 0.135898)
bones/22/position = Vector3(0.0256474, 0.094621, 0.110905)
bones/22/rotation = Quaternion(0.0458902, 0.688081, 0.723006, -0.0412534)
bones/23/rotation = Quaternion(0.361704, 0.590919, 0.647654, -0.317063)
bones/25/rotation = Quaternion(0.0563496, 0.535588, 0.842029, -0.0309395)
bones/26/rotation = Quaternion(0.219744, 0.538983, 0.790087, -0.192283)
bones/27/rotation = Quaternion(-0.120986, 0.546072, 0.816725, 0.141873)
bones/29/rotation = Quaternion(2.68676e-08, 0.676524, 0.73642, 2.82389e-08)
bones/30/rotation = Quaternion(-0.0325591, 0.811282, 0.582356, 0.0402787)
bones/31/rotation = Quaternion(-0.0374869, 0.706112, 0.706113, 0.0374844)
bones/32/rotation = Quaternion(-0.21321, 0.734608, 0.605338, 0.220134)
bones/33/rotation = Quaternion(0.127035, 0.754553, 0.62932, -0.135898)
bones/34/rotation = Quaternion(-0.0458902, 0.688081, 0.723006, 0.0412534)
bones/36/rotation = Quaternion(0.272675, 0.586205, 0.721745, -0.247175)
bones/37/rotation = Quaternion(-0.0563502, 0.535588, 0.842029, 0.0309403)
bones/38/rotation = Quaternion(-0.219745, 0.538983, 0.790087, 0.192284)
bones/39/rotation = Quaternion(0.120986, 0.546072, 0.816725, -0.141873)
bones/40/rotation = Quaternion(0.707107, -1.12673e-06, -1.12673e-06, 0.707107)
bones/41/rotation = Quaternion(0.707107, -1.71678e-06, -1.71678e-06, 0.707107)
bones/44/rotation = Quaternion(0.707107, 1.12673e-06, 1.12673e-06, 0.707107)
bones/45/rotation = Quaternion(0.707107, 1.71678e-06, 1.71678e-06, 0.707107)

[node name="EyeBrows" parent="MyHeadRig/Skeleton3D" index="0"]
surface_material_override/0 = ExtResource("10_o81br")

[node name="Eyelashes" parent="MyHeadRig/Skeleton3D" index="1"]
surface_material_override/0 = ExtResource("11_o81br")

[node name="Eyes" parent="MyHeadRig/Skeleton3D" index="2"]
surface_material_override/0 = ExtResource("12_l4a0u")
surface_material_override/1 = ExtResource("12_l4a0u")

[node name="MouthMesh" parent="MyHeadRig/Skeleton3D" index="3"]
surface_material_override/0 = ExtResource("12_k178j")

[node name="MyHumanHead" parent="MyHeadRig/Skeleton3D" index="4"]
surface_material_override/0 = ExtResource("4_ivnxr")

[node name="DollAttachPoint" parent="MyHeadRig/Skeleton3D" index="5" instance=ExtResource("16_o81br")]
pointName = "hair"

[node name="DollAttachPoint2" parent="MyHeadRig/Skeleton3D" index="6" instance=ExtResource("16_o81br")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0547889, 0.153346, 0.00886823)
pointName = "ear.L"

[node name="DollAttachPoint3" parent="MyHeadRig/Skeleton3D" index="7" instance=ExtResource("16_o81br")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.055, 0.153405, 0.009)
pointName = "ear.R"

[node name="DollAttachPoint4" parent="MyHeadRig/Skeleton3D" index="8" instance=ExtResource("16_o81br")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0237597, 0.168494, 0.0774401)
pointName = "horn.L"

[node name="DollAttachPoint5" parent="MyHeadRig/Skeleton3D" index="9" instance=ExtResource("16_o81br")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.024, 0.168, 0.077)
pointName = "horn.R"

[node name="DollAttachPoint6" parent="MyHeadRig/Skeleton3D" index="10" instance=ExtResource("16_o81br")]
pointName = "head_items"

[node name="AnimationPlayer" parent="." index="1"]
autoplay = "HeadTPose"

[node name="FaceAnimator" parent="." index="2" node_paths=PackedStringArray("dollPart", "animPlayer") instance=ExtResource("14_l4a0u")]
unique_name_in_owner = true
dollPart = NodePath("..")
animPlayer = NodePath("../AnimationPlayer")
